--- a/TODO.org
+++ b/TODO.org
@@ -1,17 +1,20 @@
 
 # Todo List
-* DONE Hello world
-* DONE Renderer with textures
-* TODO Text
-* Basic level
-* DONE Binding keys to Player movement
+* Some item classes
+* collision detection
+* physics
+* pickup item (bind key to pickup)
+* use item (press the items bound key)
+* drop item (use backspace to drop)
+* Basic random level
 
 
 # Refactor
-* Move vertex data into own file
+* Text/font objects should have their own vertex data?
 
 
 # Bugs
+
 
 # Theme
 "The more you have, the worse it is"
@@ -30,3 +33,12 @@ Grenade
 
 Monsters to get started:
 Rat
+
+
+
+Items later:
+Ammo box
+Throwable weapons (knives, spears)
+Boots of speed
+Trap (eg, slow trap)
+Shield
