Begin item factory.  Moved commands into items.  More robust dropping, cannot drop commands.  Inventory list on screen. Coloured text.

--- a/TODO.org
+++ b/TODO.org
@@ -31,7 +31,7 @@
 
 # Refactor
 * Text/font objects should have their own vertex data?
-
+* Move getkeyname to to_string
 
 # Bugs
 * Player moves faster when up/left held together
