--- a/TODO.org
+++ b/TODO.org
@@ -1,18 +1,25 @@
 
 # Todo List
-* Some item classes
-    * Health Kit
-    * Gun
 
-* Add inventory support for mouse buttons
+* Some item classes
+    * DONE Health Kit
+    * DONE Gun
+
+* DONE Add inventory support for mouse buttons
+
+* DONE Direction for player
+
+* DONE Projectile class
+    * Bullets 
+
+* DONE Render arrow for player (not an arrow, but indicates direction)
+
+* Mouseover items for an info card
 
 * Monster class
     * Health Bars
     * Melee Attacks player when touching
     * Shoots bullets towards player
-
-* Projectile class
-    * Bullets 
 
 * physics for items (Drop towards mouse)
 
@@ -21,20 +28,16 @@
     * Better loot creation
     * Have circular walls, permanent ones in a ring around the edge
 
-* Direction for player
-
-* Render arrow for player
-
 * Sounds
 
 * Camera follows player and mouse?
 
 
-
-
 # Refactor
 * Text/font objects should have their own vertex data?
-* Move getkeyname to to_string
+* DONE Move getkeyname to to_string
+* Sort inventory to seperate commands and inventory
+
 
 # Bugs
 * Player moves faster when up/left held together
@@ -56,9 +59,9 @@ Gun
 Reuseable Health kits  (Large and Small)
 Grenade
 
+
 Monsters to get started:
 Rat
-
 
 
 Items later:
