Some basic monsters done.  Projectiles destroy monsters.  WIP.

--- a/TODO.org
+++ b/TODO.org
@@ -28,6 +28,7 @@
 # Refactor
 * Text/font objects should have their own vertex data?
 * Sort inventory to seperate commands and inventory
+* put all the clear pointers into a function
 
 
 # Bugs
