Refactor basic shader and basic vertex data into a line_shader class and subclass.  Rects drawn around info cards.

--- a/TODO.org
+++ b/TODO.org
@@ -30,6 +30,7 @@
 # Bugs
 * Player moves faster when up/left held together
 * Player stops moving when left/right still held
+* Monster info card and item info card will both draw at the same time
 
 
 # Theme
